--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-     <link rel="stylesheet" href="/bootstrap.css">
+     <link rel="stylesheet" href="./bootstrap.css">
      <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -278,4 +278,5 @@ You can control colors, spacing and much more</p>
     <script src="/bootstrap.js"></script>
     <script src="/bootstrap-5.3.8-dist/1k.js"></script>
 </body>
+
 </html>
