--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 <div><div class="container-fluid bg-dark d-flex flex-column justify-content-center align-items-center" style="height: 900px;">
   
-  <img src="/WhatsApp Image 2025-09-25 at 08.04.01_2e8fe404.jpg" alt="My Picture"
+  <img src="./WhatsApp Image 2025-09-25 at 08.04.01_2e8fe404.jpg" alt="My Picture"
        class="rounded-4"
        style="height: 300px; width: 300px; object-fit: cover; box-shadow: 2px 5px 25px rgb(44, 14, 237);">
 
@@ -115,7 +115,7 @@ You can control colors, spacing and much more</p>
      
       <div class="col-md-4">
         <div class="project-card p-3">
-          <img src="/Screenshot 2025-10-16 220004.png" class="project-img rounded" alt="Portfolio Website">
+          <img src="./Screenshot 2025-10-16 220004.png" class="project-img rounded" alt="Portfolio Website">
           <div class="p-3 text-center">
             <h4 class="fw-bold">Portfolio Web</h4>
             <div class="my-2">
@@ -134,7 +134,7 @@ You can control colors, spacing and much more</p>
 
       <div class="col-md-4">
         <div class="project-card p-3">
-          <img src="/Screenshot 2025-10-16 230917.png" class="project-img rounded" alt="">
+          <img src="./Screenshot 2025-10-16 230917.png" class="project-img rounded" alt="">
           <div class="p-3 text-center">
             <h4 class="fw-bold">goibibo clon</h4>
             <div class="my-2">           
@@ -151,7 +151,7 @@ You can control colors, spacing and much more</p>
       
       <div class="col-md-4">
         <div class="project-card p-3">
-          <img src="/Screenshot 2025-10-16 231553.png" class="project-img rounded" alt="">
+          <img src="./Screenshot 2025-10-16 231553.png" class="project-img rounded" alt="">
           <div class="p-3 text-center">
             <h4 class="fw-bold">w3 school clone</h4>
             <div class="my-2">
@@ -280,3 +280,4 @@ You can control colors, spacing and much more</p>
 </body>
 
 </html>
+
